# sysprog2021q1

quiz2/bitcpy/: Makefile  bitcpy.h  main.c  plot.gp
quiz2/string_interning/: CMakeLists.txt  benchmark.c  cstr.c  cstr.h  main.c  unsigned.h
quiz3/: Makefile  driver.py  plot.gp  test.c  test.sh  xs.c  xs.cpp  xs.h  xs_benchmark.c
quiz4/: Makefile  afn_threadpool.c  afn_threadpool.h  afn_threadpool_pi.c  benchmark.sh  filter.py  pi.c  plot.gp  ringbuffer.c  ringbuffer.h  ringbuffer_example.c  threadpool.c  threadpool.h  threadpool_pi.c  valgrind_supression.config
